refactor: TODO 반영